# timesheet

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  build.sh  docker-compose.yml  fly.toml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
timesheet/: asgi.py  settings.py  urls.py  wsgi.py
timesheet/app/: admin.py  apps.py  models.py
timesheet/app/migrations/: 0001_initial.py  0002_remove_pointrecord_is_saturday_and_more.py  0003_alter_pointrecord_register_date.py  0004_pointrecord_is_holiday_pointrecord_is_saturday_and_more.py  0005_alter_pointrecord_register_date.py  0006_alter_pointrecord_is_holiday_and_more.py  0007_alter_pointrecord_is_holiday_and_more.py  0008_pointrecord_is_vacation.py  0009_alter_pointrecord_register_date_and_more.py
timesheet/app/utils/: pdf.py  pdf_stylesheet.py
