[project]
name = "timesheet"
authors = [
    {name = "Henrique Sebastião", email = "contato@henriquesebastiao.com"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["License :: MIT License"]
version = "0.0.1"

dependencies = [
    'django',
    'gunicorn',
    'psycopg2-binary',
    'python-dotenv',
    'reportlab',
    'workalendar',
    'whitenoise',
]

[project.optional-dependencies]
dev = [
    'black',
    'blue',
    'flake8',
    'isort',
    'taskipy',
]

[tool.ruff]
line-length = 79
exclude = ['migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.blue]
extend-exclude = '(migrations/)'

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'
run = "python manage.py runserver"
